# doxygen-to-md

./: .gitattributes  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml  requirements-dev.txt
.github/: CODEOWNERS  copilot-instructions.md
.github/workflows/: python-package.yml
src/doxygen_to_md/: __init__.py  cli.py  convert.py
tests/: test_all.py  test_cli_integration.py
tests/fixtures/: doxygen_all.xml
