[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "doxygen-to-md"
version = "0.0.0"
description = "Convert Doxygen-style XML output to Markdown."
readme = "README.md"
authors = [ { name = "Paul PROFIZI", email = "paul.profizi@gmail.com" } ]
license = "MIT"
license-files = ["LICENSE"]
requires-python = ">=3.8"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
]

[tool.setuptools.packages.find]
where = ["src"]

[project.scripts]
doxygen-to-md = "doxygen_to_md.cli:main"
